--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fontsource/poppins": "^4.5.10",
     "@mui/material": "^5.12.1",
     "@mui/styled-engine-sc": "^5.12.0",
+    "@types/styled-components": "^5.1.26",
     "install": "^0.13.0",
     "npm": "^9.6.4",
     "react": "^18.2.0",
